--- a/ZohaSite/ZohaSite.csproj
+++ b/ZohaSite/ZohaSite.csproj
@@ -10,4 +10,8 @@
     <Folder Include="wwwroot\imges\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
+  </ItemGroup>
+
 </Project>
